--- a/index.html
+++ b/index.html
@@ -21,7 +21,26 @@
     </div>
   </header>
 
-  <main id="movie-container"></main>
+  <!-- Featured Movie Section -->
+  <section id="featured">
+    <div class="featured-content">
+      <h2 id="featured-title">Loading...</h2>
+      <p id="featured-desc"></p>
+      <button id="play-featured">▶ Play</button>
+    </div>
+  </section>
+
+  <!-- Trending Carousel -->
+  <section class="trending">
+    <h2>🔥 Trending Now</h2>
+    <div id="trending-container" class="carousel"></div>
+  </section>
+
+  <!-- All Movies Grid -->
+  <main>
+    <h2>All Movies</h2>
+    <div id="movie-container" class="grid"></div>
+  </main>
 
   <footer>
     <p>© 2025 MovieFlix. Hosted on Netlify.</p>
